# opengl-stuff

./: CMakeLists.txt
assets/glsl/: plainFragmentShader.fs  plainVertexShader.vs  textureFragmentShader.fs  textureVertexShader.vs
include/: Instrumentor.h  ShaderPipeline.h  Texture.h  VertexAttribute.h  VertexDataBuffer.h
src/: ShaderPipeline.cpp  Texture.cpp  VertexAttribute.cpp  VertexDataBuffer.cpp  triangle.cpp
